package exp2;
//@Author：ranxing
//@Time：2022/10/6   15:45
//@File：AcerLaptop.java

public class AcerLaptop implements Laptop {
    @Override
    public void show() {
        System.out.println("这是宏基笔记本");
    }
}
