package exp2;
//@Author：ranxing
//@Time：2022/10/615:43
//@File：Creator

public interface Creator {
    public Laptop factoryMethod();
}
