package exp2;
//@Author：ranxing
//@Time：2022/10/6   15:46
//@File：DellLaptop.java

public class DellLaptop implements Laptop {
    @Override
    public void show() {
        System.out.println("这是戴尔笔记本");
    }
}
