package exp2;
//@Author：ranxing
//@Time：2022/10/6   15:44
//@File：HPLaptop.java

public class HPLaptop implements Laptop {
    @Override
    public void show() {
        System.out.println("这是惠普笔记本");
    }
}
