package exp2;
//@Author：ranxing
//@Time：2022/10/615:41
//@File：Laptop

public interface Laptop {
    public  void show();
}
