package exp2;
//@Author：ranxing
//@Time：2022/10/6   15:45
//@File：LenovoLaptop.java

public class LenovoLaptop implements Laptop {
    @Override
    public void show() {
        System.out.println("这是联想笔记本");
    }
}
